test: 주식 시세 감지 테스트 코드 작성
- 실시간 시세를 받을 수 있다.
- 특정 가격 조건을 감시할 수 있다.